[package]
name = "test_drift_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_drift_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
drift = { git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.71.0", features = ["cpi", "mainnet-beta"], default-features = false}
