[package]
name = "test_drift_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_drift_cpi"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
bytemuck = { version = "1.4.0" }
drift = { git = "https://github.com/drift-labs/protocol-v2.git", commit = "2bbe28c", features = ["cpi", "mainnet-beta"]}
static_assertions = "1.1.0"